# passwdb

./: Cargo.toml  README.md  build.rs
proto/: passwdb.proto
src/: client.rs  server.rs
